# process_engineering_toolkit

./: README.md  pyproject.toml
notebooks/: exploration.ipynb
src/process_engineering_toolkit/: CSTR.py  flow.py  reactions.py
src/process_engineering_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/process_engineering_toolkit/reactor/: pbr.py
